name change of all function and controller with routes and all services refcatoring done
